70% sisa fixing